# jupyterlab-pdf-preview

./: .eslintrc.json  CHANGELOG.md  CITATION.cff  README.md  package.json  pyproject.toml  webpack.config.js
.github/workflows/: ci.yml  github-pages.yml
src/plugins/: pdfPreviewPlugin.tsx
